# 2188HW5

./: CMakeLists.txt  DictEntry.h  dictionary.cpp  dictionary.h  functions.cpp  functions.h  main.cpp  revSorted.txt
